--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --recursive --exit",
     "createEntity": "node utils/createEntity.js",
     "start": "nodemon server.js"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -19,13 +21,16 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.2.0",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.28.0",
     "openssl": "^1.1.0",
+    "pluralize": "^8.0.0",
     "react-router-dom": "^6.2.1",
-    "xss-clean": "^0.1.1",
-    "xlsx": "^0.18.0"
+    "supertest": "^6.2.2",
+    "xlsx": "^0.18.0",
+    "xss-clean": "^0.1.1"
   },
   "keywords": [],
   "author": "",
